--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "csv-parser": "^3.0.0",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
+    "googleapis": "^137.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
